--- a/A-Commonsense-Path-Generator-for-Connecting-Entities.ipynb
+++ b/A-Commonsense-Path-Generator-for-Connecting-Entities.ipynb
@@ -55,9 +55,9 @@
     "        with torch.no_grad():\n",
     "            for step in range(self.max_len):\n",
     "                outputs = self.gpt(next_token, past=past)\n",
-    "                hidden = outputs[0][:, -1]\n",
+    "                hidden = outputs[0][:, -1] # (bs,hid) last token\n",
     "                past = outputs[1]\n",
-    "                next_token_logits = self.lm_head(hidden)\n",
+    "                next_token_logits = self.lm_head(hidden) # (bs, voc)\n",
     "                next_logits, next_token = next_token_logits.topk(k=1, dim=1)\n",
     "                generated = torch.cat((generated, next_token), dim=1)\n",
     "        return generated "
